--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>holly and nichole website</title>
+    <link href="styles.css" rel="stylesheet" type="text/css" />
 
     <title>Document</title>
 </head>
