added colours and buttons

--- a/index.html
+++ b/index.html
@@ -5,13 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>holly and nichole website</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet" type="text/css" />
+
 
     <title>Document</title>
 </head>
 
 <body>
     <h1> hello Alan! </h1>
+    
+    <button type="button" class="btn btn-outline-danger">Press Me</button>
+    <button type="button" class="btn btn-outline-danger">Press Me Too!</button>
+    <button type="button" class="btn btn-outline-danger">I DARE you to press Me!</button>
+
+    <div class="container">
+        <div class="row">
+
+            <div class="content col-12 col-md-6 col-xl-3">
+                <h2>Content One</h2>
+                <p>Here is some stuff.</p>
+            </div>
+
+            <div class="content col-12 col-md-6 col-xl-3">
+                <h2>Content Two</h2>
+                <p>Here is some more stuff.</p>
+            </div>
+
+            <div class="content col-12 col-md-6 col-xl-3">
+                <h2>Content Three</h2>
+                <p>Here is some more stuff.</p>
+            </div>
+
+            <div class="content col-12 col-md-6 col-xl-3">
+                <h2>Content Four</h2>
+                <p>Here is some more stuff.</p>
+            </div>
+        </div>
+
+    </div>
+
 
 </body>
 
